Cambio en las listas de Estados de los DispositivosInteligentes para que no rompa al recuperarlos de la BD